logs/uncaughtExceptions.log
2018-12-22 11:34:09 P12 G12T+0530 [192.168.43.11] error : uncaughtException: await is only valid in async function
D:\wamp64\www\node-api\routes\admin\role.js:146
            await rolesPermissions.save();
            ^^^^^

SyntaxError: await is only valid in async function
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:656:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:699:10)
    at Module.load (internal/modules/cjs/loader.js:598:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:537:12)
    at Function.Module._load (internal/modules/cjs/loader.js:529:3)
    at Module.require (internal/modules/cjs/loader.js:636:17)
    at require (internal/modules/cjs/helpers.js:20:18)
    at Object.<anonymous> (D:\wamp64\www\node-api\startup\admin-routes.js:6:14)
    at Module._compile (internal/modules/cjs/loader.js:688:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:699:10)
    at Module.load (internal/modules/cjs/loader.js:598:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:537:12)
    at Function.Module._load (internal/modules/cjs/loader.js:529:3) 
2018-12-22 11:34:17 P12 G12T+0530 [192.168.43.11] error : uncaughtException: await is only valid in async function
D:\wamp64\www\node-api\routes\admin\role.js:145
            await rolesPermissions.save();
            ^^^^^

SyntaxError: await is only valid in async function
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:656:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:699:10)
    at Module.load (internal/modules/cjs/loader.js:598:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:537:12)
    at Function.Module._load (internal/modules/cjs/loader.js:529:3)
    at Module.require (internal/modules/cjs/loader.js:636:17)
    at require (internal/modules/cjs/helpers.js:20:18)
    at Object.<anonymous> (D:\wamp64\www\node-api\startup\admin-routes.js:6:14)
    at Module._compile (internal/modules/cjs/loader.js:688:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:699:10)
    at Module.load (internal/modules/cjs/loader.js:598:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:537:12)
    at Function.Module._load (internal/modules/cjs/loader.js:529:3) 
2018-12-23 1:20:13 AM12 G12T+0530 [192.168.43.11] error : uncaughtException: navigationMasters is not defined
ReferenceError: navigationMasters is not defined
    at navigationMenuListing (D:\wamp64\www\node-api\helpers\SocketHelper.js:151:5)
    at process._tickCallback (internal/process/next_tick.js:68:7) 
2018-12-23 1:50:38 AM12 G12T+0530 [192.168.43.11] error : uncaughtException: _ is not defined
ReferenceError: _ is not defined
    at getUsersPermissionIDs (D:\wamp64\www\node-api\helpers\SocketHelper.js:145:9)
    at process._tickCallback (internal/process/next_tick.js:68:7) 
